[package]
name = "ipa_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.6.3"
aws-sdk-polly = { version = "1.72.0", features = ["rt-tokio"] }
lazy_static = "1.4.0"
log = "0.4.27"
env_logger = "0.11.8"
rand = { version = "0.9.1" }
rocket = { version = "0.5.1", features = ["json"] }
rocket-governor = { version = "0.2.0-rc.4", features = ["limit_info"] }
serde = { version = "1.0", features = ["derive"] }